# SREGym-e2e

./: .gitignore  FINDINGS.md  benchmark-problems-progress.md  bugs.txt  cassandra-bug-reproduction-report.md  distributed_hosts.yaml  etcd_auto_construction_plan.md  etcd_auto_construction_report.md  etcd_reproduction_challenges.md  main.py  plan.md  pyproject.toml  repro-findings.md  repro-progress.md
.claude/: classify_workflow.js  problem_gen_workflow.js  repro_candidates_workflow.js  repro_workflow.js  skill_update_workflow.js
.claude/repro-evidence/: candidate_results.json  classify_verdicts.json  repro-CASSANDRA-10968.md  repro-CASSANDRA-12525.md  repro-CASSANDRA-12734.md  repro-CASSANDRA-12949.md  repro-CASSANDRA-13874.md  repro-CASSANDRA-13935.md  repro-CASSANDRA-14013.md  repro-CASSANDRA-14204.md  repro-CASSANDRA-14349.md  repro-CASSANDRA-14463.md  repro-CASSANDRA-14477.md  repro-CASSANDRA-14496.md  repro-CASSANDRA-14559.md  repro-CASSANDRA-14925.md  repro-CASSANDRA-15134.md  repro-CASSANDRA-15135.md  repro-CASSANDRA-15164.md  repro-CASSANDRA-15191.md  repro-CASSANDRA-15433.md  repro-CASSANDRA-15459.md  repro-CASSANDRA-15669.md  repro-CASSANDRA-15814.md  repro-CASSANDRA-15857.md  repro-CASSANDRA-15896.md  repro-CASSANDRA-15970.md  repro-CASSANDRA-16071.md  repro-CASSANDRA-16127.md  repro-CASSANDRA-16146.md  repro-CASSANDRA-16156.md  repro-CASSANDRA-16259.md  repro-CASSANDRA-16307.md  repro-CASSANDRA-16334.md  repro-CASSANDRA-16372.md  repro-CASSANDRA-16418.md  repro-CASSANDRA-16577.md  repro-CASSANDRA-16671.md  repro-CASSANDRA-16692.md  repro-CASSANDRA-16718.md  (+63 more)
.claude/skills/sregym-db-bug-reproduction/: SKILL.md  reference.md
.claude/skills/workflow-fanout-at-scale/: SKILL.md
.github/: copilot-instructions.md
.github/skills/sregym-db-bug-reproduction/: SKILL.md
clients/autosubmit/: autosubmit_agent.py
clients/claudecode/: driver.py
clients/stratus/configs/: diagnosis_agent_config.yaml  diagnosis_agent_prompts.yaml  mitigation_agent_config.yaml  mitigation_agent_prompts.yaml
clients/stratus/stratus_agent/: base_agent.py  state.py
clients/stratus/stratus_utils/: str_to_tool.py
clients/stratus/tools/: rebuild_tools.py
clients/stratus/tools/text_editing/: file_manip.py  windowed_file.py
distributed/: __main__.py  app.py  collector.py  config.py  node_setup.py  partitioner.py  remote.py  status.py
kind/: kind-config-arm-light.yaml  kind-config-x86-light.yaml
mcp_server/: Dockerfile  rebuild_server.py  sregym_mcp_server.py
mcp_server/k8s/: deployment.yaml  kustomization.yaml
sregym/: agent_launcher.py  paths.py
sregym/conductor/: conductor.py  conductor_api.py
sregym/conductor/oracles/: code_fix_mitigation.py  etcd_data_integrity_mitigation.py  reproducer_pod_mitigation.py
sregym/conductor/problems/: auto_cassandra_10968.py  auto_cassandra_12525.py  auto_cassandra_12949.py  auto_cassandra_13874.py  auto_cassandra_13935.py  auto_cassandra_14013.py  auto_cassandra_14204.py  auto_cassandra_14349.py  auto_cassandra_14463.py  auto_cassandra_14477.py  auto_cassandra_14496.py  auto_cassandra_14559.py  auto_cassandra_14925.py  auto_cassandra_15134.py  auto_cassandra_15135.py  auto_cassandra_15191.py  auto_cassandra_15433.py  auto_cassandra_15459.py  auto_cassandra_15814.py  auto_cassandra_15857.py  auto_cassandra_15896.py  auto_cassandra_16071.py  auto_cassandra_16146.py  auto_cassandra_16156.py  auto_cassandra_16259.py  auto_cassandra_16307.py  auto_cassandra_16334.py  auto_cassandra_16372.py  auto_cassandra_16418.py  auto_cassandra_16577.py  auto_cassandra_16671.py  auto_cassandra_16692.py  auto_cassandra_16718.py  auto_cassandra_16796.py  auto_cassandra_16836.py  auto_cassandra_16839.py  auto_cassandra_16868.py  auto_cassandra_16898.py  auto_cassandra_16902.py  auto_cassandra_16977.py  (+115 more)
sregym/conductor/problems/generators/: cli.py  issue_parser.py  spec_to_code.py
sregym/conductor/problems/patches/cassandra_compaction_oom/src/java/org/apache/cassandra/db/compaction/: CompactionTask.java
sregym/conductor/problems/patches/cassandra_crash_schema_integrity/src/java/org/apache/cassandra/db/: Keyspace.java
sregym/conductor/problems/patches/cassandra_oom_read/src/java/org/apache/cassandra/db/: ReadCommand.java
sregym/conductor/problems/patches/cassandra_write_cache_oom/src/java/org/apache/cassandra/db/: Mutation.java
sregym/service/: cassandra_build_manager.py  container_runner.py  db_build_spec.py  generic_db_build_manager.py  github_issue_parser.py  identity.py  issue_parser.py  jira_issue_parser.py  k8s_proxy.py  reproducer_extractor.py  reproducer_validator.py  source_audit.py  source_manager.py
sregym/service/apps/: cassandra.py  generic_db_app.py  operator_app.py
sregym/service/metadata/: cassandra.json
tests/anti_cheat/: test_egress_restriction.py  test_identity_scrubbing.py  test_k8s_proxy_mutation_guard.py  test_source_audit.py
tests/e2e-testing-scripts/: ant.sh  auto_submit.py  automating_tests.py
